<resources>

    <!-- Start: do not translate-->

    <!-- credentials -->
    <string translatable="false" name="facebook_app_id">1723621367940962</string>
    <string translatable="false" name="facebook_account_kit_client_token">0f4f99bdbf1cbe64da65cd8536bbc274</string>

    <string translatable="false" name="pref_notification_key">perf_notification</string>
    <string translatable="false" name="ghurbo_messenger">https://m.me/ghurbocom</string>

    <string translatable="false" name="details_transition">details_transition</string>
    <string translatable="false" name="room_transition">room_transition</string>
    <string translatable="false" name="img_transition">img_transition</string>

    <string translatable="false" name="fav_authority">com.mcc.ghurbo.favorites</string>
    <string translatable="false" name="notification_authority">com.mcc.ghurbo.notifications</string>

    <!-- End: do not translate -->

    <string translatable="false" name="app_name">Ghurbo</string>
    <string name="action_settings">Settings</string>

    <string name="tapAgain">Tap again to exit!</string>
    <string name="no_internet">No internet!</string>
    <string name="connect">Connect</string>

    <string name="brand_logo">Brand logo</string>

    <string name="email">Email</string>
    <string name="skip">SKIP</string>
    <string name="facebook_cap">FACEBOOK</string>
    <string name="sign_out">Sign Out</string>
    <string name="google_cap">GOOGLE</string>
    <string name="phone">Phone</string>

    <string name="get_registered">Get Registered</string>

    <string name="empty_result">No data!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_favorites">Favorites</string>
    <string name="menu_reservations">Bookings</string>
    <string name="others">Others</string>
    <string name="menu_setting">Settings</string>
    <string name="terms">Terms and Conditions</string>
    <string name="privacy">Privacy Policy</string>
    <string name="faq">FAQ</string>
    <string name="rate">Rate App</string>
    <string name="share">Share</string>

    <string name="share_text">Install best travel application from:</string>

    <string name="pref_notification_title">Notification</string>
    <string name="pref_notification_summary">Turn on/off notification</string>

    <string name="hotel_input_hint">Select Location/Hotel</string>
    <string name="tour_input_hint">Location/Tour Package Name</string>
    <string name="check_in_hint">Check In</string>
    <string name="check_out_hint">Check Out</string>
    <string name="adult_hint">Adult</string>
    <string name="child_hint">Child</string>
    <string name="rooms_hint">Rooms</string>
    <string name="search">Search</string>

    <string name="search_hotel">Search Hotel</string>
    <string name="search_tour">Search Tour</string>

    <string name="login_failed">Login failed.</string>

    <string name="guest_user">Guest</string>
    <string name="date">Date</string>
    <string name="type">Type</string>

    <string name="select_tour">Select location or tour package name</string>
    <string name="unavailable">Unavailable</string>

    <string name="loading">Please wait...</string>
    <string name="input_validation">Please provide all information to search</string>

    <string name="placeholder">text</string>
    <string name="install_messenger">Install facebook messenger</string>
    <string name="permission_not_granted">Permission not granted</string>
    <string name="name">Name</string>

    <string name="login">Login</string>

    <string name="person_max">\u0020 person max</string>
    <string name="currency">\u0020 BDT</string>
    <string name="days">\u0020 Days,</string>
    <string name="nights">\u0020 Nights</string>
    <string name="infant">Infant</string>
    <string name="na">N/A</string>

    <string name="book_now">Book Now</string>

    <string name="star_hotel">\u0020star hotel</string>
    <string name="not_star_info">no star info</string>
    <string name="checkin">Check In</string>
    <string name="checkout">Check Out</string>
    <string name="rating">Rating: \u0020</string>
    <string name="no_rating">No rating info</string>
    <string name="rooms">Rooms</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="final_price">Final Price</string>
    <string name="capacity">Capacity:\u0020</string>
    <string name="adult">\u0020adult</string>
    <string name="and">\u0020&amp;\u0020</string>
    <string name="child">\u0020child</string>
    <string name="total">\u0020total)</string>
    <string name="max">\u0020(max\u0020</string>
    <string name="per_night">\u0020per night</string>
    <string name="percent">\u0020%</string>
    <string name="without_discount">\u0020without discount</string>
    <string name="extra_bed">\u0020/extra bed</string>
    <string name="complementary">\u0020 Complimentary breakfast</string>
    <string name="note">Additional note</string>
    <string name="coupon">Coupon</string>
    <string name="confirm">Confirm Reservation</string>

    <string name="concat_note">Note:</string>
    <string name="concat_coupon">, Coupon:</string>
    <string name="login_now">Login Now</string>
    <string name="login_message">Please login to book</string>

    <string name="print">Print</string>
    <string name="simply_rate">Rate:</string>
    <string name="rate_adult">Adult Rate:</string>
    <string name="rate_child">Child Rate:</string>
    <string name="total_adult">Total Adult:</string>
    <string name="total_child">Total Child:</string>
    <string name="total_rooms">Total Rooms:</string>
    <string name="price_total">Total:</string>
    <string name="booking_no">Booking Number:\u0020</string>
    <string name="booking_failed">Booking Failed!</string>

    <string name="ghurbo_print">Ghurbo Booking Confirmation</string>
    <string name="initiating">Initiating...</string>

    <string name="login_msg">Please login first</string>
    <string name="fav_login_msg">Please login to see favorite list</string>
    <string name="no_fav">No favorite item</string>

    <string name="booking_image_description">Hotel booking image</string>
    <string name="my_bookings">My Booking History</string>
    <string name="my_favorites">My Booking History</string>
    <string name="notifications">Notifications</string>
    <string name="notification_details">Notification details</string>

    <string name="no_booking">No booking yet</string>
    <string name="hotel_icon">Hotel button icon</string>
    <string name="tour_icon">Tour button icon</string>
    <string name="hotel_image">Hotel image</string>
    <string name="user_image">Profile picture</string>
    <string name="room_image">Room image</string>
    <string name="location_icon">Location icon</string>
    <string name="call_icon">Call icon</string>
    <string name="checkin_icon">Check in icon</string>
    <string name="checkout_icon">Checkout icon</string>
    <string name="date_icon">Date icon</string>
    <string name="list_item_icon">List item icon</string>
    <string name="full_image">Fullscreen image</string>
    <string name="data_warning_icon">Data warning icon</string>
    <string name="breakfast_icon">Complimentary breakfast icon</string>
    <string name="notification_icon">Notification icon</string>

    <string name="no_notification">No notification</string>
    <string name="no_hotel">No hotel found</string>
    <string name="no_tour">No tour package found</string>

    <string name="tour_details_image">Tour details image</string>
    <string name="hotel_location_selector">Hotel location selector</string>
    <string name="tour_location_selector">Tour location selector</string>
    <string name="minus_adult">Minus adult</string>
    <string name="plus_adult">Plus adult</string>
    <string name="minus_child">Minus child</string>
    <string name="plus_child">Plus child</string>
    <string name="plus_rooms">Plus rooms</string>
    <string name="minus_rooms">Minus rooms</string>
    <string name="noti_icon">Notification icon</string>
    <string name="map_button">Map button</string>
    <string name="tour_type_selector">Tour type selector</string>

    <string name="cancelled">Cancelled</string>
    <string name="failed">Failed</string>
    <string name="choose">Choose Option</string>
    <string name="send_email">Send mail...</string>

</resources>
