<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/brand_logo"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_layers" />

    <ImageView
        android:id="@+id/ghurbo_logo"
        android:layout_width="@dimen/ghurbo_logo_size"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/brand_logo"
        android:src="@drawable/ic_ghurbo" />

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">


        <com.mcc.ghurbo.view.RobotoTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/get_registered"
            android:textSize="16sp" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_login_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:background="?attr/selectableItemBackground"
            app:buttonSize="wide" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/btn_login_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            app:com_facebook_login_text="@string/facebook_cap"
            app:com_facebook_logout_text="@string/sign_out" />

        <Button
            android:id="@+id/btn_login_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/phone" />


        <LinearLayout
            android:id="@+id/bottom_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/btn_email_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="0.5"
                android:background="@android:color/transparent"
                android:gravity="start|center_vertical"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/email"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_skip_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="0.5"
                android:background="@android:color/transparent"
                android:gravity="end|center_vertical"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/skip"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>