<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/lighter_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_ghurbo" />

    <LinearLayout
        android:id="@+id/search_switcher"
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_button_height"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/search_hotel_panel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:elevation="2dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/hotel_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/hotel_icon"
                android:src="@drawable/ic_hotel_white" />

            <TextView
                android:id="@+id/tv_hotel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/search_hotel"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/search_tour_panel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/tour_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/tour_icon"
                android:src="@drawable/ic_tour_color" />

            <TextView
                android:id="@+id/tv_tour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center|bottom"
                android:text="@string/search_tour"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>